fixed: some findbugs' equals/hashCode/etc warnings